--- a/app/src/main/res/layout/activity_debug_interface.xml
+++ b/app/src/main/res/layout/activity_debug_interface.xml
@@ -76,11 +76,11 @@
 	        android:onClick="bluetoothButtonStop"
 	        android:text="Stop Bluetooth Scan" />
 
-	    <TextView
-		    android:id="@+id/debugtext6"
-		    android:layout_width="wrap_content"
-		    android:layout_height="wrap_content"
-		    android:text="Triggering a GPS or accelerometer recording will cause the Beiwe app to record that data stream for the duration set in your study's configuration. Manually triggering a GPS or accelerometer recording event DOES reset the periodic timers for that data stream." />
+		<TextView
+			android:id="@+id/debugtext6"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:text="Triggering a GPS or accelerometer recording will cause the Beiwe app to record that data stream for the duration set in your study's configuration. Manually triggering a GPS or accelerometer recording event DOES reset the periodic timers for that data stream." />
 
 	    <Button
 	        android:id="@+id/buttonEnableGPS"
@@ -110,7 +110,14 @@
 	        android:onClick="accelerometerOff"
 	        android:text="Stop Accelerometer Recording" />
 
-	    <Button
+		<Button
+			android:id="@+id/buttonEnableAmbientLight"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:onClick="ambientLightOn"
+			android:text="Trigger Ambient Light Recording" />
+
+		<Button
 	        android:id="@+id/buttonWifiScan"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
