--- a/app/src/main/res/layout/activity_debug_interface.xml
+++ b/app/src/main/res/layout/activity_debug_interface.xml
@@ -146,6 +146,13 @@
 			android:text="Trigger Ambient Light Recording" />
 
 		<Button
+			android:id="@+id/buttonUpdateUsage"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:onClick="usageUpdate"
+			android:text="Trigger Usage Update" />
+
+		<Button
 	        android:id="@+id/buttonWifiScan"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
