--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -81,11 +81,23 @@
             android:inputType="textPassword"
             android:hint="@string/registration_confirm_new_password_hint"/>
 
-        <Button
-            android:id="@+id/submitButton"
-            style="@style/RegistrationSubmitButton"
-            android:onClick="registerButtonPressed"
-            android:text="@string/registration_submit" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center">
+            <Button
+                android:id="@+id/scanQrButton"
+                style="@style/RegistrationSubmitButton"
+                android:onClick="scanQrButtonPressed"
+                android:text="@string/scan_barcode_button" />
+
+            <Button
+                android:id="@+id/submitButton"
+                style="@style/RegistrationSubmitButton"
+                android:onClick="registerButtonPressed"
+                android:text="@string/registration_submit" />
+        </LinearLayout>
 
         <ProgressBar
             android:id="@+id/progressBar"
