--- a/app/src/main/res/layout/layout_barcode_capture.xml
+++ b/app/src/main/res/layout/layout_barcode_capture.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/topLayout"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center"
@@ -13,6 +12,11 @@
         android:id="@+id/camera_preview"
         android:layout_gravity="center"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" >
-    </org.beiwe.app.ui.qrcode.CameraSourcePreview>
-</LinearLayout>
+        android:layout_height="wrap_content" />
+
+    <!--<SurfaceView-->
+        <!--android:id="@+id/camera_overlay"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent" />-->
+
+</RelativeLayout>
