--- a/app/src/main/res/layout/layout_barcode_capture.xml
+++ b/app/src/main/res/layout/layout_barcode_capture.xml
@@ -14,9 +14,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
-    <!--<SurfaceView-->
-        <!--android:id="@+id/camera_overlay"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent" />-->
+    <SurfaceView
+        android:id="@+id/camera_overlay"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </RelativeLayout>
