--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -36,9 +36,8 @@
             android:id="@+id/serverUrlInput"
             style="@style/RegistrationInputStyle"
             android:inputType="textUri"
-            android:text="ec2-18-139-106-135.ap-southeast-1.compute.amazonaws.com"
+            android:text="@string/default_website"
             android:hint="@string/registration_server_url_hint" >
-            <requestFocus />
         </EditText>
 
         <TextView
