--- a/app/src/main/res/menu/register.xml
+++ b/app/src/main/res/menu/register.xml
@@ -4,9 +4,12 @@
     tools:context="org.beiwe.app.Register" >
 
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never"/>
+        android:id="@+id/action_enter_debug_interface"
+        android:title="@string/enter_debug_interface"
+        app:showAsAction="never" />
+
+    <item android:id="@+id/menu_about"
+        android:title="@string/menu_about"
+        app:showAsAction="never" />
 
 </menu>
