--- a/app/src/main/res/layout/activity_debug_interface.xml
+++ b/app/src/main/res/layout/activity_debug_interface.xml
@@ -17,6 +17,19 @@
 			android:layout_height="wrap_content"
 			android:text="Long-click any feature button (with *) to clear the debugger console and display that feature's log in the debugger console:" />
 
+		<Button
+			android:id="@+id/buttonStopConsole"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:includeFontPadding="false"
+			android:padding="0dp"
+			android:layout_margin="0dp"
+			android:maxHeight="30dp"
+			android:onClick="stopConsole"
+			android:visibility="visible"
+			android:textColor="#ffff0000"
+			android:text="@string/debug_activity_logging_warn" />
+
 		<ScrollView
 			android:id="@+id/logcat_scroll"
 			android:scrollbars="vertical"
@@ -59,13 +72,6 @@
 				android:layout_height="wrap_content"
                 android:textStyle="bold"
 				android:text="@string/debug_activity_trigger_warn" />
-
-			<Button
-				android:id="@+id/buttonStopConsole"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:onClick="stopConsole"
-				android:text="Clear Console and Stop Logging" />
 
 			<Button
 				android:id="@+id/buttonDownload"
@@ -230,6 +236,13 @@
 				android:layout_height="wrap_content"
 				android:onClick="scanWifi"
 				android:text="Trigger Wifi Scan" />
+
+			<Button
+				android:id="@+id/buttonTestQRscan"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:onClick="testScanQR"
+				android:text="Test QR Scan" />
 
 			<TextView
 				android:id="@+id/debugtext7"
