--- a/app/src/main/res/layout/password_prompt.xml
+++ b/app/src/main/res/layout/password_prompt.xml
@@ -10,7 +10,7 @@ android:padding="10dp" >
     android:id="@+id/textView1"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:text="Please input the master reset password:"
+    android:text="Please input the master unlocker password:"
     android:labelFor="@+id/editTextDialogUserInput"
     android:textAppearance="?android:attr/textAppearanceLarge" />
 
